STRETCH created fixed navigation / opacity

--- a/css/index.css
+++ b/css/index.css
@@ -163,8 +163,13 @@ p {
 .nav {
   color: #454A59;
   background: #F6F6F6;
+  height: 100px;
   padding: 20px 0;
   border: 1px double #F1F1F1;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.8;
 }
 .nav .title {
   font-size: 4rem;
@@ -188,6 +193,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  margin-top: 100px;
 }
 .home .intro img {
   width: 90%;
