--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,14 @@
 // Home Content
 
 .home {
+  
 
   .intro { //header open
+    margin-top: 100px;
 
     img {
+      
+
       .headerImg();
 
       @media @phone{//media opens
