--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,8 +2,13 @@
 .nav { //nav opens
     color: @nav-font;
     background: @nav-bg;
+    height: 100px;
     padding: 20px 0;
     .bordered(1px, double, @nav-border);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 0.8;
 
     .title{ //title open
         font-size: 4rem;
@@ -18,7 +23,6 @@
         li {
             margin: 10px;
             padding: 5px;
-
         }
 
        
